<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/menuNowPlaying"
            android:icon="@drawable/ic_play"
            android:title="@string/now_playing" />
        <item
            android:id="@+id/menuUpcoming"
            android:icon="@drawable/ic_av_timer"
            android:title="@string/upcoming" />

        <item
            android:id="@+id/menuFavorite"
            android:icon="@drawable/ic_favorite_border_black"
            android:title="@string/favorite" />
    </group>

    <group android:checkableBehavior="none">

        <item
            android:id="@+id/menuSearch"
            android:icon="@drawable/ic_search"
            android:title="@string/search" />
    </group>
</menu>
