<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/CardViewListItem"
    android:layout_width="250dp"
    android:layout_height="120dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/risImageViewPoster"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/similar_poster" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/risImageViewPoster"
            android:padding="10dp">

            <TextView
                android:id="@+id/risTextViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/neosans"
                android:maxLines="3"
                android:text="@string/dummy_movie_title"
                android:textColor="?attr/textHeaderColor"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/risTextViewRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="7dp"
                android:text="@string/dummy_rating" />
        </RelativeLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>