<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailMovieActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            app:layout_scrollFlags="snap|scroll|enterAlways">

            <ImageView
                android:id="@+id/detailActivityToolbarBackground"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/toolbar_background" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/alhpa"
                android:contentDescription="@string/toolbar_fade" />

            <ImageView
                android:id="@+id/detailActivityBackButton"
                android:layout_width="32dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/back_button"
                android:src="@drawable/ic_arrow_back" />

            <TextView
                android:id="@+id/detailActivityTextViewToolbar"
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:maxLines="2"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/detailActivityBackButton"
                android:layout_toStartOf="@id/detailActivityFavoriteButton"
                android:text="@string/dummy_movie_title"
                android:textColor="@android:color/white" />

            <ImageView
                android:id="@+id/detailActivityFavoriteButton"
                android:layout_width="32dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_favorite"
                android:contentDescription="@string/favorite_button" />
        </RelativeLayout>
    </android.support.design.widget.AppBarLayout>

    <ProgressBar
        android:id="@+id/detailActivityProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/detailActivityNestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/layout_header_detail_movie" />
            <include layout="@layout/layout_body_detail_movie" />

            <FrameLayout
                android:id="@+id/detailActivityFrameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>