<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CardViewListItem">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="160dp">

            <ImageView
                android:id="@+id/rimImageViewThumbnail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/thumbnail_movie" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_rounded_corner_alpha"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingTop="3dp"
                android:paddingEnd="16dp"
                android:paddingBottom="3dp">

                <TextView
                    android:id="@+id/rimTextViewRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_rating"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/rimTextViewVoting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/voting"
                    android:textColor="@android:color/white"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:paddingStart="16dp"
            android:paddingTop="10dp"
            android:paddingEnd="16dp"
            android:paddingBottom="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/rimLinearLayoutAddFavorite"
                android:layout_centerVertical="true">

                <TextView
                    android:id="@+id/rimTextViewTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:fontFamily="@font/neosans"
                    android:text="@string/dummy_movie_title"
                    android:textColor="?attr/textHeaderColor"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:ellipsize="end" />

                <TextView
                    android:id="@+id/rimTexTViewLanguage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/dummy_language"
                    android:ellipsize="end" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rimLinearLayoutAddFavorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_rounded_corner_error"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="7dp"
                android:paddingTop="7dp"
                android:paddingEnd="7dp"
                android:paddingBottom="7dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favorited"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>